recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:7: error: ':' expected but identifier found.
def faireCarre(Double cote){
                      ^FourSquare:17: error: identifier expected but '}' found.
}
^