recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  for(i <- 0 to 3){
    faireCarre(100);
  }
}

def faireCarre(Double cote){
  avance(cote);
  droite(90.0);
  avance(cote);
  droite(90.0);
  avance(cote);
  droite(90.0);
  avance(cote);
}